# Syncro

./: .env  App.css  App.jsx  README  alembic.ini  db.json  index.css  index.jsx  main.jsx  main.py  package-lock.json  package.json  pyproject.toml  server.js  vite.config.js
alembic/: env.py
alembic/versions/: 092da10c057f_few_changes_and_new_tables_genres_and_.py  19a0d6a1a59f_first_migration.py  3d12004da810_migration.py  3ddfbe34c095_change_primary_and_foreign_keys_to_.py  6fcd267293e5_retest.py  7e83be572956_add_new_column.py  8e84a2b7826b_ajout_de_tables_users_et_musics.py  9b3a1d71be05_fourth_test.py  9cc73a32244f_scnd_test.py  a51af9eebfff_third_test.py  ab09675f3142_first_migration.py  de3cb0f53ca7_ajout_d_une_table_profils.py  e700030bb685_test.py
app/: __init__.py  actions.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
app/db/: database.py  models.py
app/schemas/: __init__.py  http_error.py  music.py  post.py  recommendation.py  user.py
app/tests/: test_music.py  test_recommendation.py  test_users.py
src/Layouts/: Layout.jsx
src/components/: Footer.jsx  Header.jsx  Layout.jsx  PlayerControls.jsx  PlayerDisplay.jsx  VolumeControls.jsx
src/hooks/: useToken.js
src/page/: Favorites.jsx  Forgot.jsx  Home.jsx  Login.jsx  Player.jsx  Playlist.jsx  Profile.jsx  Recommandation.jsx  Register.jsx
