[tool.poetry]
name = "syncro"
version = "0.1.0"
description = ""
authors = ["S4ryat <khifsara3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
databases = {extras = ["postgresql"], version = "^0.9.0"}
pydantic = "^2.7.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
sqlalchemy-stubs = "^0.4"
flake8 = "^7.0.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
